--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,10 @@
 {
     "files.autoSave": "onFocusChange",
-    "python.terminal.launchArgs": ["activate 'college project'"],
     "editor.wordWrap": "on",
-    "editor.tabSize": 2,
+    "editor.tabSize": 4,
     "editor.autoClosingBrackets": "always",
-    "editor.autoSurround": "languageDefined",
     "editor.bracketPairColorization.enabled": true,
     "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "terminal.integrated.defaultProfile.windows": "Command Prompt",
+    "python.terminal.launchArgs": ["echo 'command 1'", "echo 'command 2'"],
 }
